--- a/doc/admin.adoc
+++ b/doc/admin.adoc
@@ -7,7 +7,17 @@
 * https://www.postgresql.org/[PostgreSQL] 14.5 or later
 * Required to build from source:
 ** https://golang.org/[Go] 1.19 or later
+** goyacc
 ** https://gcc.gnu.org/[GCC C compiler] 9.3.0 or later
+
+To install goyacc:
+
+[source,bash]
+----
+go install golang.org/x/tools/cmd/goyacc@master
+
+export PATH=$PATH:$GOPATH/bin
+----
 
 === Server configuration
 
