Add list status statement

--- a/doc/commands.adoc
+++ b/doc/commands.adoc
@@ -263,3 +263,23 @@ Drop a data source `example`:
 ----
 DROP DATA SOURCE example;
 ----
+
+==== LIST STATUS
+
+Show system status
+
+[source,subs="verbatim,quotes"]
+----
+LIST STATUS
+----
+
+===== Description
+
+LIST STATUS shows the status of system components.
+
+===== Examples
+
+----
+LIST STATUS;
+----
+
