--- a/doc/external.adoc
+++ b/doc/external.adoc
@@ -3,15 +3,18 @@
 === FOLIO
 
 When creating a FOLIO data source, use the `module 'folio'` option,
-and set `trimschemaprefix` to remove the tenant from schema names:
+and set `trimschemaprefix` to remove the tenant from schema names and
+`addschemaprefix` to add a `folio_` prefix to the schema names.  For
+example:
 
 ----
 CREATE DATA SOURCE folio TYPE kafka OPTIONS (
     module 'folio',
-    trimschemaprefix 'tenant_',
+    trimschemaprefix 'tenantname_',
+    addschemaprefix 'folio_',
     brokers 'kafka:29092',
     topics '^metadb_example_1.*',
-    consumergroup 'metadb_example_1_1',
+    consumergroup 'metadb_example_1_1'
 );
 ----
 
@@ -28,7 +31,7 @@ supertenant (`supertenant_mod_.+`), and mod-pubsub data
 === ReShare
 
 Before defining a ReShare data source, create a data origin for each
-consortial tenant.
+consortial tenant.  For example:
 
 ----
 CREATE DATA ORIGIN tenant1;
@@ -38,22 +41,26 @@ CREATE DATA ORIGIN tenant2;
 CREATE DATA ORIGIN tenant3;
 ----
 
-Then use the `module 'reshare'` option when creating the data source.
+Then use the `module 'reshare'` option when creating the data source,
+and set `addschemaprefix` to add a `reshare_` prefix to the schema
+names:
 
 ----
 CREATE DATA SOURCE reshare TYPE kafka OPTIONS (
     module 'reshare',
+    addschemaprefix 'reshare_',
     brokers 'kafka:29092',
     topics '^metadb_example_1.*',
-    consumergroup 'metadb_example_1_1',
+    consumergroup 'metadb_example_1_1'
 );
 ----
 
-The order is important: The initial set of data origins should be
-created before the data source is created so that schema names of
-incoming data will be processed correctly.  Later, whenever a new
-consortial tenant is to be added, it should be defined in Metadb using
-`CREATE DATA ORIGIN` before the tenant is added to ReShare.
+Note that the order of commands is important: The initial set of data
+origins should be created before the data source is created so that
+schema names of incoming data will be processed correctly.  Later,
+whenever a new consortial tenant is to be added, it should be defined
+in Metadb using `CREATE DATA ORIGIN` before the tenant is added to
+ReShare.
 
 In the Debezium PostgreSQL connector configuration, it is suggested
 that credentials (`.+mod_login`), the public schema, the Okapi
