Add schemastopfilter option to data source

--- a/doc/commands.adoc
+++ b/doc/commands.adoc
@@ -175,6 +175,9 @@ CREATE DATA SOURCE defines connection settings for an external data source.
 |`schemapassfilter`
 |Regular expressions matching schema names to accept (comma-separated list).
 
+|`schemastopfilter`
+|Regular expressions matching schema names to ignore (comma-separated list), evaluated after `schemapassfilter`.
+
 |`trimschemaprefix`
 |Prefix to remove from schema names.
 
