--- a/doc/admin.adoc
+++ b/doc/admin.adoc
@@ -8,6 +8,7 @@
 * Required to build from source:
 ** https://golang.org/[Go] 1.19 or later
 ** goyacc (installation instructions below)
+** https://www.colm.net/open-source/ragel/[Ragel] 6.10 or later
 ** https://gcc.gnu.org/[GCC C compiler] 9.3.0 or later
 
 === Building the software
