--- a/doc/admin.adoc
+++ b/doc/admin.adoc
@@ -232,10 +232,14 @@ configuration by setting `schema.exclude.list` or
 `table.exclude.list`.  Otherwise they will generate error messages in
 the Metadb log.
 
-It is recommended to use the `heartbeat.action.query` connector
-configuration to avoid spikes in disk space consumption within the
-source database.  (See the Debezium PostgreSQL connector documentation
-for more details.)
+It is recommended to use the connector configuration settings
+`heartbeat.interval.ms` and `heartbeat.action.query` to avoid spikes
+in disk space consumption within the source database.  (See the
+Debezium PostgreSQL connector documentation for more details.)  It is
+best to place the heartbeat table in a schema apart from the data that
+will be read by Metadb, and then the `schemastopfilter` option of the
+`CREATE DATA SOURCE` command can be used to filter out the heartbeat
+table.
 
 The replication slot disk usage must be monitored, because under
 certain error conditions it can grow too large and possibly fill up
