doc: clarify note on inferred JSON fields

--- a/doc/tutorial.adoc
+++ b/doc/tutorial.adoc
@@ -288,10 +288,10 @@ SELECT __id, __start, id, groupname, description FROM patrongroup__t;
 A corresponding history table called `patrongroup\\__t__` is also
 created.
 
-Note that JSON data are treated as "schemaless," so that nothing is
-known about fields that do not exist in the JSON data.  As a result, a
-column is only created from a JSON field if the field is present in at
-least one JSON record.
+Note that JSON data are treated as "schemaless," and fields are
+inferred from their presence in the data rather than read from a JSON
+schema.  As a result, a column is only created from a JSON field if
+the field is present in at least one JSON record.
 
 === Workspaces
 
